--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">MapSampleApp</string>
     <string name="action_settings">Settings</string>
     <string name="search">Search</string>
-
+    <string name="search_hint">Search a location</string>
     <string-array name="MenuOptions">
         <item>Search</item>
         <item>To-do List</item>
